feat(DM5): change print queue (endless copies) and remove PLC tab when hybrid printer
re-generate ink error
change print queue (endless copies) and remove PLC tab when hybrid printer
Reactivate the old communication between Siemens PLC and DPU (TCP/IP) and allow to choice between OPCUA and TCP.

Related work items: #2544, #2547

--- a/mvt_digiprint_gui/Resources/Language/Resources.resx
+++ b/mvt_digiprint_gui/Resources/Language/Resources.resx
@@ -2721,4 +2721,7 @@ No Splices in the machine?</value>
   <data name="NoFlush" xml:space="preserve">
     <value>No Flush</value>
   </data>
+  <data name="Endless" xml:space="preserve">
+    <value>Endless</value>
+  </data>
 </root>
