--- a/mvt_digiprint_gui/Resources/Language/Resources.it-IT.resx
+++ b/mvt_digiprint_gui/Resources/Language/Resources.it-IT.resx
@@ -267,6 +267,9 @@
   <data name="CLGainFact" xml:space="preserve">
     <value>Fattore d’incremento C.L.</value>
   </data>
+  <data name="ClusterNo" xml:space="preserve">
+    <value>Cluster No</value>
+  </data>
   <data name="Cluster1" xml:space="preserve">
     <value>Cluster 1</value>
   </data>
@@ -314,6 +317,12 @@
   </data>
   <data name="ControlMode" xml:space="preserve">
     <value>Modalità controllo</value>
+  </data>
+  <data name="Cooler_Pres" xml:space="preserve">
+    <value>Cooler Pressure</value>
+  </data>
+  <data name="Cooler_Temp" xml:space="preserve">
+    <value>Cooler Temperature</value>
   </data>
   <data name="Copies" xml:space="preserve">
     <value>Copie</value>
@@ -2198,6 +2207,9 @@ Nessuna giunzione nella macchina?</value>
   </data>
   <data name="Paper" xml:space="preserve">
     <value>Carta</value>
+  </data>
+  <data name="ProductionTestTable" xml:space="preserve">
+    <value>Production Test Table</value>
   </data>
   <data name="RadexTestSlide" xml:space="preserve">
     <value>Slide test Radex</value>
