--- a/mvt_digiprint_gui/Resources/Language/Resources.fr-FR.resx
+++ b/mvt_digiprint_gui/Resources/Language/Resources.fr-FR.resx
@@ -267,6 +267,9 @@
   <data name="CLGainFact" xml:space="preserve">
     <value>Coefficient d’élargissement C.L.</value>
   </data>
+  <data name="ClusterNo" xml:space="preserve">
+    <value>Cluster No</value>
+  </data>
   <data name="Cluster1" xml:space="preserve">
     <value>Groupe 1</value>
   </data>
@@ -314,6 +317,12 @@
   </data>
   <data name="ControlMode" xml:space="preserve">
     <value>Mode de contrôle</value>
+  </data>
+  <data name="Cooler_Pres" xml:space="preserve">
+    <value>Cooler Pressure</value>
+  </data>
+  <data name="Cooler_Temp" xml:space="preserve">
+    <value>Cooler Temperature</value>
   </data>
   <data name="Copies" xml:space="preserve">
     <value>Copies</value>
@@ -2198,6 +2207,9 @@ Pas d’épissures dans la machine ?</value>
   </data>
   <data name="Paper" xml:space="preserve">
     <value>Papier</value>
+  </data>
+  <data name="ProductionTestTable" xml:space="preserve">
+    <value>Production Test Table</value>
   </data>
   <data name="RadexTestSlide" xml:space="preserve">
     <value>Lame de test Radex</value>
