--- a/mvt_digiprint_gui/Resources/Language/Resources.pt-PT.resx
+++ b/mvt_digiprint_gui/Resources/Language/Resources.pt-PT.resx
@@ -285,6 +285,12 @@
   <data name="ControlMode" xml:space="preserve">
     <value>Modo de Controlo</value>
   </data>
+  <data name="Cooler_Pres" xml:space="preserve">
+    <value>Cooler Pressure</value>
+  </data>
+  <data name="Cooler_Temp" xml:space="preserve">
+    <value>Cooler Temperature</value>
+  </data>
   <data name="Copies" xml:space="preserve">
     <value>Cópias</value>
   </data>
